--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,77 @@
+absl-py==2.1.0
 annotated-types==0.7.0
 anyio==4.8.0
+astunparse==1.6.3
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
 dlib==19.24.6
 exceptiongroup==1.2.2
 face-recognition==1.3.0
 face-recognition-models==0.3.0
 fastapi==0.115.6
+filelock==3.17.0
+flatbuffers==25.1.21
+fsspec==2024.12.0
+gast==0.6.0
+google-pasta==0.2.0
 greenlet==3.1.1
+grpcio==1.69.0
 h11==0.14.0
+h5py==3.12.1
+huggingface-hub==0.27.1
 idna==3.10
-numpy==2.2.2
+Jinja2==3.1.5
+joblib==1.4.2
+keras==3.8.0
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml-dtypes==0.3.2
+mpmath==1.3.0
+namex==0.0.8
+networkx==3.4.2
+numpy==1.26.4
 opencv-python-headless==4.11.0.86
+opt_einsum==3.4.0
+optree==0.14.0
+packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
+protobuf==4.25.5
 pydantic==2.10.5
 pydantic_core==2.27.2
+Pygments==2.19.1
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+pytz==2024.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.1
+sentence-transformers==3.3.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.41.3
+sympy==1.13.3
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
+threadpoolctl==3.5.0
+tokenizers==0.21.0
+torch==2.2.2
+tqdm==4.67.1
+transformers==4.48.1
 typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
 uvicorn==0.34.0
+Werkzeug==3.1.3
+wrapt==1.17.2
