--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ astunparse==1.6.3
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
+cmake==3.31.4
 dlib==19.24.6
 exceptiongroup==1.2.2
 face-recognition==1.3.0
